--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
+
+# mappedBy ==> Se le asigna a la entidad hija (la que depende de otra)
